# aegis-trading-agent

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  HANDOFF.md  PLAN.md  README.md  SPEC.md  pyproject.toml  requirements.txt
deploy/: agent.service  copy-trade.service
docs/: BACKTEST_REPORT.md  BINANCE_WEB3_SETUP.md  JUDGE_DEMO_RUNBOOK.md  STRATEGY_STATE_MACHINE.md
scripts/: agent_hub_desk.py  analyze_conditional.py  beta_diag.py  binance_futures_region_check.py  binance_w3w_region_check.py  binance_web3_check.py  build_alpha_symbol_map.py  build_alpha_universe.py  build_bsc_smart_wallets.py  build_eligible_from_official.py  build_project_sources.py  build_universe_from_resolved.py  check_binance_alpha_volume.py  check_binance_web3_env.py  check_registration.py  fetch_gmgn_smart_money.py  fetch_token_list.py  film_report.py  find_recent_winners.py  gem_report.py  leaderboard_flow.py  leaderboard_recon.py  rebuild_universe_1inch.py  robustness.py  run_backtest.py  run_catalyst_scanner.py  run_eligible_backtest.py  run_event_scanner.py  run_track1_backtest.py  run_walkforward.py  scan_diag.py  shadow_report.py  slippage_scan.py  smoke_swap.py  soak_test.py  test_multiswap.py  verify_core_tokens.py  verify_key.py  wallet_audition.py  wallet_check.py
tests/: conftest.py  test_aegis_loop.py  test_agent_loop.py  test_alpha_universe.py  test_backtest.py  test_best_execution.py  test_beta_core.py  test_binance_web3.py  test_build_bsc_smart_wallets.py  test_catalyst_scanner.py  test_catalyst_score.py  test_chain_events.py  test_claude_advisor.py  test_cli_signals.py  (+59 more)
(+116 files in other folders)
